force-app/main/default/objects/AH_BIO_Assessment__c/AH_BIO_Assessment__c.object-meta.xml
<CustomObject>
    <description>Junction object used to link requirements to sources and sources to requirements (a requirement may be linked to multiple requirement sources, and a source may be linked to many requirements).
This object is also used to track information related to the assessment the selected requirement, and provide information on related compliance activities and the related compliance LOE.</description>
    <label>BIO Assessment</label>
    <nameField>
        <displayFormat>BIO-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BIO Assessments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>