force-app/main/default/objects/AH_BIO_Assessment__c/fields/Applicable__c.field-meta.xml
<CustomField>
    <fullName>Applicable__c</fullName>
    <defaultValue>true</defaultValue>
    <description>All requirements will be entered into the system for each distinct area of Scope. Requirements that are not applicable will be assessed as &quot;Not Applicable&quot;. This will allow reporting of non-applicable requirements that can be reviewed for validity with the CISO office. In addition, it shows that all requirements were considered, not forgotten or missed.</description>
    <inlineHelpText>The selected Requirement is applicable to the scope of this assessment</inlineHelpText>
    <label>Applicable</label>
    <type>Checkbox</type>
</CustomField>