force-app/main/default/objects/AH_BIO_Assessment__c/fields/Assessment__c.field-meta.xml
<CustomField>
    <fullName>Assessment__c</fullName>
    <description>This is the actual assessment field, the core of the BIO Assessment system. From this selection, a numeric score is extracted (0 to 5) and used for calculations and reporting.  Picklist values will need to be added in the future when the scope of the Assessment moves beyond the Corporate Security requirement Source and into other requirement sources (i.e. privacy and compliance).</description>
    <inlineHelpText>Guidance: 
0. No documentation 
1. Partly defined, performed inconsistently 
2. Undocumented but executed in a structured and consistent way 
3. Documented procedures 
4. Periodically assessed and improved 
5. Continuous assessment and improvement</inlineHelpText>
    <label>Assessment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0. Non-existent</fullName>
            </value>
            <value>
                <fullName>1. Initial / Ad hoc</fullName>
            </value>
            <value>
                <fullName>2. Repeatable but intuitive</fullName>
            </value>
            <value>
                <fullName>3. Defined</fullName>
            </value>
            <value>
                <fullName>4. Managed and measurable</fullName>
            </value>
            <value>
                <fullName>5. Optimized</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>