force-app/main/default/objects/AH_BIO_Assessment__c/fields/Assessment_Scope__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Scope__c</fullName>
    <description>Used to segregate Source and Assessment records to a defined assessment scope (individual office, region, division, division subgroup, etc.).  For example, the first use of this Assessment will be for Hospitality S&amp;C/SO.  Later assessments may be done for Hospitality PMS and Hospitality TravelClick.</description>
    <inlineHelpText>Scope of the assessment</inlineHelpText>
    <label>Assessment Scope</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BIO_Assessment_Scope</valueSetName>
    </valueSet>
</CustomField>