force-app/main/default/objects/AH_BIO_Assessment__c/fields/Asset_Location__c.field-meta.xml
<CustomField>
    <fullName>Asset_Location__c</fullName>
    <description>Risk Assessment</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Location of the Asset, or where the Asset is used</inlineHelpText>
    <label>Asset Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>