force-app/main/default/objects/AH_BIO_Assessment__c/fields/Audit_LOE__c.field-meta.xml
<CustomField>
    <fullName>Audit_LOE__c</fullName>
    <description>Internal Audit. NICC-035711</description>
    <inlineHelpText>Monthly LOE for performing the audit procedures</inlineHelpText>
    <label>Audit LOE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>