force-app/main/default/objects/AH_BIO_Assessment__c/fields/Audit_Procedures__c.field-meta.xml
<CustomField>
    <fullName>Audit_Procedures__c</fullName>
    <description>Internal Audit. NICC-035711</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Audit procedures to confirm that the operational procedures are being performed</inlineHelpText>
    <label>Audit Procedures</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>