force-app/main/default/objects/AH_BIO_Assessment__c/fields/Availability__c.field-meta.xml
<CustomField>
    <fullName>Availability__c</fullName>
    <description>Used to assess the Availability of an Asset (Risk Assessment)</description>
    <inlineHelpText>4. Cannot afford more than a 10 minute outage
3. Cannot afford more than a 4 hour outage
2. Cannot afford more than a 24 hour outage
1. Can operate with minimal disruption for upwards of a week or more</inlineHelpText>
    <label>Availability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>4. High Critical</fullName>
            </value>
            <value>
                <fullName>3. Critical</fullName>
            </value>
            <value>
                <fullName>2. Important</fullName>
            </value>
            <value>
                <fullName>1. Basic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>