force-app/main/default/objects/AH_BIO_Assessment__c/fields/Confidentiality__c.field-meta.xml
<CustomField>
    <fullName>Confidentiality__c</fullName>
    <description>Used to assess the Confidentiality of an Asset (Risk Assessment)</description>
    <inlineHelpText>4. Highly sensitive, significant competitive advantage, strategic planning
3. Competitive advantage, specific planning, critical business process
2. An inconvenience if made public outside of a specific group or the company
1. No special protection</inlineHelpText>
    <label>Confidentiality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>4. Confidential &amp; Secret</fullName>
            </value>
            <value>
                <fullName>3. Strictly Confidential</fullName>
            </value>
            <value>
                <fullName>2. Confidential &amp; Restricted</fullName>
            </value>
            <value>
                <fullName>1. Public</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>