force-app/main/default/objects/AH_BIO_Assessment__c/fields/Confidentiality_Score__c.field-meta.xml
<CustomField>
    <fullName>Confidentiality_Score__c</fullName>
    <formula>CASE( Confidentiality__c , 
&quot;4. Confidential &amp; Secret&quot;, 4, 
&quot;3. Strictly Confidential&quot;, 3, 
&quot;2. Confidential &amp; Restricted&quot;, 2, 
&quot;1. Public&quot;, 1, 
-1)</formula>
    <inlineHelpText>Numeric score of the selected Confidentiality assessment</inlineHelpText>
    <label>Confidentiality Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>