force-app/main/default/objects/AH_BIO_Assessment__c/fields/Control_Owner__c.field-meta.xml
<CustomField>
    <fullName>Control_Owner__c</fullName>
    <description>Person assigned to the selected Role</description>
    <formula>Control_Owner_Role__r.Assigned_To__r.FirstName + &quot; &quot; + Control_Owner_Role__r.Assigned_To__r.LastName</formula>
    <inlineHelpText>Person assigned to the selected Role</inlineHelpText>
    <label>Control Owner</label>
    <type>Text</type>
</CustomField>