force-app/main/default/objects/AH_BIO_Assessment__c/fields/Financial__c.field-meta.xml
<CustomField>
    <fullName>Financial__c</fullName>
    <description>Used to assess the potential Financial impact of an Asset (Risk Assessment)</description>
    <inlineHelpText>4. Severe immediate/short-term impact, &gt;$15 million
3. Large impact, $5-$15 million
2. Medium impact, $1-$5 million
1. Low impact, &lt;$1 million</inlineHelpText>
    <label>Financial</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>4. Extreme</fullName>
            </value>
            <value>
                <fullName>3. High</fullName>
            </value>
            <value>
                <fullName>2. Medium</fullName>
            </value>
            <value>
                <fullName>1. Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>