force-app/main/default/objects/AH_BIO_Assessment__c/fields/Financial_Score__c.field-meta.xml
<CustomField>
    <fullName>Financial_Score__c</fullName>
    <formula>CASE( Financial__c , 
&quot;4. Extreme&quot;, 4, 
&quot;3. High&quot;, 3, 
&quot;2. Medium&quot;, 2, 
&quot;1. Low&quot;, 1, 
-1)</formula>
    <inlineHelpText>Numeric score of the selected Financial assessment</inlineHelpText>
    <label>Financial Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>