force-app/main/default/objects/AH_BIO_Assessment__c/fields/Integrity_Score__c.field-meta.xml
<CustomField>
    <fullName>Integrity_Score__c</fullName>
    <formula>CASE( Integrity__c , 
&quot;4. Special&quot;, 4, 
&quot;3. Standard&quot;, 3, 
&quot;2. Basic&quot;, 2, 
&quot;1. Negligible&quot;, 1, 
-1)</formula>
    <inlineHelpText>Numeric score of the selected Integrity assessment</inlineHelpText>
    <label>Integrity Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>