force-app/main/default/objects/AH_BIO_Assessment__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <description>Risk Assessment - Assigned Owner</description>
    <formula>Owner_Role__r.Assigned_To__r.FirstName + &quot; &quot; + Owner_Role__r.Assigned_To__r.LastName</formula>
    <inlineHelpText>Person assigned to the Functional Owner Role</inlineHelpText>
    <label>Owner</label>
    <type>Text</type>
</CustomField>