force-app/main/default/objects/AH_BIO_Assessment__c/fields/Regulatory__c.field-meta.xml
<CustomField>
    <fullName>Regulatory__c</fullName>
    <description>Used to assess the Regulatory exposure of an Asset (Risk Assessment)</description>
    <inlineHelpText>Legislation, standards or regulations are:
4: Global (PCI, SSAE)
3. Continental (GDPR, APEC privacy, EU regulations)
2. Country-specific (data protection, encryption regulations)
1. Regional  (local ordinances and regulatory reporting)</inlineHelpText>
    <label>Regulatory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>4. High/Global</fullName>
            </value>
            <value>
                <fullName>3. Medium/Regional</fullName>
            </value>
            <value>
                <fullName>2. Low/Local</fullName>
            </value>
            <value>
                <fullName>1. Basic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>