force-app/main/default/objects/AH_BIO_Assessment__c/fields/Requirement__c.field-meta.xml
<CustomField>
    <fullName>Requirement__c</fullName>
    <description>Requirement being assessed</description>
    <formula>Requirement_Number__r.Requirement__c</formula>
    <inlineHelpText>Requirement being assessed</inlineHelpText>
    <label>Requirement</label>
    <type>Text</type>
</CustomField>