force-app/main/default/objects/AH_BIO_Assessment__c/fields/Requirement_Number__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Number__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Requirement Number being assessed</description>
    <inlineHelpText>Requirement Number being assessed</inlineHelpText>
    <label>Requirement Number</label>
    <referenceTo>AH_BIO_Requirement__c</referenceTo>
    <relationshipLabel>Assessments</relationshipLabel>
    <relationshipName>BIO_Assessment</relationshipName>
    <type>Lookup</type>
</CustomField>