force-app/main/default/objects/AH_BIO_Assessment__c/fields/Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>Risk_Level__c</fullName>
    <description>Verbal translation of the Risk Value</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Overall Risk Assessment</inlineHelpText>
    <label>Risk Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>