force-app/main/default/objects/AH_BIO_Assessment__c/fields/Risk_Likelihood_Score__c.field-meta.xml
<CustomField>
    <fullName>Risk_Likelihood_Score__c</fullName>
    <description>Risk Assessment</description>
    <formula>CASE(  Risk_Likelihood__c  , 
&quot;5. Very High&quot;, 5,
&quot;4. High&quot;, 4, 
&quot;3. Medium&quot;, 3, 
&quot;2. Low&quot;, 2, 
&quot;1. Very Low&quot;, 1, 
&quot;0. N/A&quot;, 0,
-1)</formula>
    <inlineHelpText>Numeric score for the selected Risk Likelihood</inlineHelpText>
    <label>Risk Likelihood Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>