force-app/main/default/objects/AH_BIO_Assessment__c/fields/Risk_Value__c.field-meta.xml
<CustomField>
    <fullName>Risk_Value__c</fullName>
    <formula>Asset_Criticality_Score__c *  Risk_Likelihood_Score__c</formula>
    <inlineHelpText>Risk score based on Asset Criticality Score and Risk Likelihood Score</inlineHelpText>
    <label>Risk Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>