force-app/main/default/objects/AH_BIO_Assessment__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <description>The assessment score is 0-5 based on the selected Security Assessment value where &quot;0. Non Existent&quot; = 0 and &quot;5. Optimized&quot; = 5&quot;. Assessments that are yet to be performed are left blank, scored as a -1, and these negative values are excluded from calculations and reporting.  These scores are specific to the initial use of the assessment objects (Security Assessment).  The formula will have to be modified in the future when new Assessment picklist values are introduced for other requirement sources.</description>
    <formula>CASE(Assessment__c, 
&quot;0. Non-existent&quot;, 0, 
&quot;1. Initial / Ad hoc&quot;, 1, 
&quot;2. Repeatable but intuitive&quot;, 2, 
&quot;3. Defined&quot;, 3, 
&quot;4. Managed and measurable&quot;, 4, 
&quot;5. Optimized&quot;, 5, 
-1)</formula>
    <inlineHelpText>Numeric score for the assessment</inlineHelpText>
    <label>Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>