force-app/main/default/objects/AH_BIO_Assessment__c/recordTypes/Requirement_Assessment.recordType-meta.xml
<RecordType>
    <fullName>Requirement_Assessment</fullName>
    <active>true</active>
    <description>Used for assessing requirements related to Corporate Security Policies and Standards, or other requirement sources</description>
    <label>Requirement Assessment</label>
</RecordType>