force-app/main/default/objects/AH_BIO_Assessment__c/recordTypes/Risk_Assessment.recordType-meta.xml
<RecordType>
    <fullName>Risk_Assessment</fullName>
    <active>true</active>
    <description>Used to assess Assets as part of a Risk Management Program</description>
    <label>Risk Assessment</label>
</RecordType>