force-app/main/default/objects/AH_BIO_Assessment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Source__c</columns>
    <columns>Assessment__c</columns>
    <columns>Assessment_Scope__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>AH_BIO_Assessment__c.Requirement_Assessment</value>
    </filters>
    <label>All</label>
</ListView>