force-app/main/default/objects/AH_BIO_Assessment__c/listViews/PL_04_Asset_Management.listView-meta.xml
<ListView>
    <fullName>PL_04_Asset_Management</fullName>
    <columns>NAME</columns>
    <columns>Requirement_Number__c</columns>
    <columns>Requirement__c</columns>
    <columns>Score__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Source__c</field>
        <operation>contains</operation>
        <value>CS 04.</value>
    </filters>
    <label>PL 04. Asset Management</label>
</ListView>