force-app/main/default/objects/AH_BIO_Assessment__c/listViews/Risk_Register.listView-meta.xml
<ListView>
    <fullName>Risk_Register</fullName>
    <columns>NAME</columns>
    <columns>Source__c</columns>
    <columns>Risk_Value__c</columns>
    <columns>Risk_Level__c</columns>
    <columns>Asset_Criticality__c</columns>
    <columns>Asset_Criticality_Score__c</columns>
    <columns>Risk_Likelihood__c</columns>
    <columns>Business_Impact__c</columns>
    <columns>Owner__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>AH_BIO_Assessment__c.Risk_Assessment</value>
    </filters>
    <label>Risk Register</label>
</ListView>